--- a/src/index.html
+++ b/src/index.html
@@ -208,8 +208,7 @@
         }
 		#inputBox_wrapper {			
 			text-align: center;
-			margin: 32px 0;
-			padding: 0 16px;
+			padding: 32px 16px;
 		}
 		#inputBox_inputs input {
 		    width: 32px;
