--- a/src/index.html
+++ b/src/index.html
@@ -353,7 +353,7 @@
     </div>
     <div id="inputBox_hint">
         <div class="checking">Checking...</div>
-        <div class="wrong">Wrong key. Please try again.</div>
+        <div class="wrong">Wrong key. Please try again. (Hint: '123456'.)</div>
         <div class="pleaseInput">Please enter your key.</div>
         <div class="right">Accepted!</div>
     </div>
